<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="nl.mjvrijn.matthewvanrijn_pset1.PotatoActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_title"
        android:id="@+id/title_view"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textSize="30sp" />

    <RelativeLayout
        android:id="@+id/potato_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title_view"
        android:layout_centerHorizontal="true">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imageView"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:background="@drawable/body"
            android:contentDescription="@string/potato_body" />
    </RelativeLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/checkbox_title"
        android:id="@+id/checkboxes_title_view"
        android:layout_below="@id/potato_layout"
        android:layout_centerHorizontal="true"
        android:textSize="20sp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_below="@id/checkboxes_title_view"
        android:orientation="horizontal">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="match_parent">

            <CheckBox
                android:text="@string/potato_arms"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <CheckBox
                android:text="@string/potato_ears"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <CheckBox
                android:text="@string/potato_eyebrows"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <CheckBox
                android:text="@string/potato_eyes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <CheckBox
                android:text="@string/potato_glasses"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <LinearLayout
            android:gravity="end"
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="match_parent">

            <CheckBox
                android:text="@string/potato_hat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <CheckBox
                android:text="@string/potato_mouth"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <CheckBox
                android:text="@string/potato_mustache"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <CheckBox
                android:text="@string/potato_nose"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <CheckBox
                android:text="@string/potato_shoes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>
